--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/laurenbsst/Heritage-Tourism#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongoose": "^6.8.2"
+    "mongoose": "^6.8.2",
+    "mongoose-int32": "^0.6.0",
+    "nodemon": "^2.0.20"
   }
 }
