--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A web-app allowing users to participate in guided tours of heritage sites in Norwich.",
   "scripts": {
     "devStart": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -19,9 +20,12 @@
   "homepage": "https://github.com/laurenbsst/Heritage-Tourism#readme",
   "dependencies": {
     "alert": "^5.1.4",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "mocha": "^10.2.0",
     "mongoose": "^6.8.2",
     "mongoose-int32": "^0.6.0",
     "nodemon": "^2.0.20"
